2008-08-28  Jonathan Pryor  <jpryor@novell.com>

	* mklambda: Change method names: s/Func/A/g or s/Func/F/g for
	  Action vs. Func, and s/Expression/XA/g or s/Expression/XF/g for
	  Expression<Action> vs. Expression<Func>, respectively.
	  This is done because Func/Expression could be ambiguous --
	  Lambda.Func<int>(Console.WriteLine) (for Console.WriteLine(int)) was
	  ambiguous between Lambda.Func<int>(Action<int>) and
	  Lambda.Func<int,int>(Func<int,int>); FAIL.  Thus, we need different method
	  names for Action vs. Func (and then different methods for 
	  Expression<T>-accepting methods as well).  Use A instead of Action, etc.,
	  because this is shorter, makes for a reasonably short Expression method
	  name (ExpressionAction vs. ExpressionFunc would be annoyingly long), and
	  people I asked about this thought it would be fine. :-)
	* doc/en/**: Flush method name changes.

2008-08-28  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush (adds CLSCompliance attributes).
	* doc/doc-template.xsl: The information panel should provide Mono.Rocks
	  information, not NDesk.Options.

2008-08-27  Jonathan Pryor  <jpryor@novell.com>

	* mktuples: Disable CLS Compliance checking on the _N members.

2008-08-27  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add
	  Mono.Rocks/StreamConverter.cs to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Tests/Mono.Rocks.Tests/StreamConverterTest.cs to the build.
	* doc/en/**: Flush.

2008-08-27  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/index.xml, doc/en/Mono.Rocks/IEnumerableRocks.xml: Flush; removes
	  IEnumerableRocks.Implode<T>(IEnumerable<T>,string,Action<StringBuilder,T>).

2008-08-26  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.csproj: Reset the <TargetFrameworkVersion/> to 3.5 so that
	  Mono.Rocks builds properly in VS.NET.

2008-08-26  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/index.xml: Flush.
