@@ -36,13 +36,15 @@
             delegate type, or insert a cast.
             </para>
       <para>
-        <see cref="M:Mono.Rocks.Lambda.Func" /> allows you to
-            provide a lambda body for a builtin delegate type such as
-            <see cref="T:System.Action" /> or <see cref="T:System.Func{TResult}" />,
+        <see cref="M:Mono.Rocks.Lambda.A" /> allows you to
+            provide a lambda body for the <see cref="T:System.Action" />
+            builtin delegate type, and <see cref="M:Mono.Rocks.Lambda.F" />
+            allows you to provide a lambda body for the
+            <see cref="T:System.Func{TResult}" /> delegate type,
             thus removing the need for a cast or an extra variable:
             </para>
       <code lang="C#">
-            Lambda.Func ((int x) =&gt; Console.WriteLine (x)) (5);</code>
+            Lambda.F ((int x) =&gt; Console.WriteLine (x)) (5);</code>
       <para>
         <see cref="T:Mono.Rocks.Lambda" /> provides the following sets of
             functionality:
@@ -51,36 +53,36 @@
         <item>
           <term>Delegate creation methods, which return
             <see cref="T:System.Action" />-like delegates:
-            <see cref="M:Mono.Rocks.Lambda.Func(System.Action)" />,
-            <see cref="M:Mono.Rocks.Lambda.Func``1(System.Action{``0})" />,
-            <see cref="M:Mono.Rocks.Lambda.Func``2(System.Action{``0,``1})" />,
-            <see cref="M:Mono.Rocks.Lambda.Func``3(System.Action{``0,``1,``2})" />, and
-            <see cref="M:Mono.Rocks.Lambda.Func``4(System.Action{``0,``1,``2,``3})" />.
+            <see cref="M:Mono.Rocks.Lambda.A(System.Action)" />,
+            <see cref="M:Mono.Rocks.Lambda.A``1(System.Action{``0})" />,
+            <see cref="M:Mono.Rocks.Lambda.A``2(System.Action{``0,``1})" />,
+            <see cref="M:Mono.Rocks.Lambda.A``3(System.Action{``0,``1,``2})" />, and
+            <see cref="M:Mono.Rocks.Lambda.A``4(System.Action{``0,``1,``2,``3})" />.
             </term>
         </item>
         <item>
           <term>Delegate creation methods which return
             return <see cref="T:System.Func{TResult}" />-like delegates
-            <see cref="M:Mono.Rocks.Lambda.Func``1(System.Func{``0})" />,
-            <see cref="M:Mono.Rocks.Lambda.Func``2(System.Func{``0,``1})" />,
-            <see cref="M:Mono.Rocks.Lambda.Func``3(System.Func{``0,``1,``2})" />,
-            <see cref="M:Mono.Rocks.Lambda.Func``4(System.Func{``0,``1,``2,``3})" />, and
-            <see cref="M:Mono.Rocks.Lambda.Func``5(System.Func{``0,``1,``2,``3,``4})" />.
+            <see cref="M:Mono.Rocks.Lambda.F``1(System.Func{``0})" />,
+            <see cref="M:Mono.Rocks.Lambda.F``2(System.Func{``0,``1})" />,
+            <see cref="M:Mono.Rocks.Lambda.F``3(System.Func{``0,``1,``2})" />,
+            <see cref="M:Mono.Rocks.Lambda.F``4(System.Func{``0,``1,``2,``3})" />, and
+            <see cref="M:Mono.Rocks.Lambda.F``5(System.Func{``0,``1,``2,``3,``4})" />.
             </term>
         </item>
         <item>
           <term>
             <see cref="T:System.Linq.Expressions.Expression" />-creating methods:
-            <see cref="M:Mono.Rocks.Lambda.Expression(System.Linq.Expressions.Expression{System.Action})" />,
-            <see cref="M:Mono.Rocks.Lambda.Expression``1(System.Linq.Expressions.Expression{System.Func{``0}})" />,
-            <see cref="M:Mono.Rocks.Lambda.Expression``1(System.Linq.Expressions.Expression{System.Action{``0}})" />,
-            <see cref="M:Mono.Rocks.Lambda.Expression``2(System.Linq.Expressions.Expression{System.Func{``0,``1}})" />,
-            <see cref="M:Mono.Rocks.Lambda.Expression``2(System.Linq.Expressions.Expression{System.Action{``0,``1}})" />,
-            <see cref="M:Mono.Rocks.Lambda.Expression``3(System.Linq.Expressions.Expression{System.Func{``0,``1,``2}})" />,
-            <see cref="M:Mono.Rocks.Lambda.Expression``3(System.Linq.Expressions.Expression{System.Action{``0,``1,``2}})" />,
-            <see cref="M:Mono.Rocks.Lambda.Expression``4(System.Linq.Expressions.Expression{System.Func{``0,``1,``2,``3}})" />,
-            <see cref="M:Mono.Rocks.Lambda.Expression``4(System.Linq.Expressions.Expression{System.Action{``0,``1,``2,``3}})" />, and
-            <see cref="M:Mono.Rocks.Lambda.Expression``5(System.Linq.Expressions.Expression{System.Func{``0,``1,``2,``3,``4}})" />.
+            <see cref="M:Mono.Rocks.Lambda.XA(System.Linq.Expressions.Expression{System.Action})" />,
+            <see cref="M:Mono.Rocks.Lambda.XA``1(System.Linq.Expressions.Expression{System.Action{``0}})" />,
+            <see cref="M:Mono.Rocks.Lambda.XA``2(System.Linq.Expressions.Expression{System.Action{``0,``1}})" />,
+            <see cref="M:Mono.Rocks.Lambda.XA``3(System.Linq.Expressions.Expression{System.Action{``0,``1,``2}})" />,
+            <see cref="M:Mono.Rocks.Lambda.XA``4(System.Linq.Expressions.Expression{System.Action{``0,``1,``2,``3}})" />, and
+            <see cref="M:Mono.Rocks.Lambda.XF``1(System.Linq.Expressions.Expression{System.Func{``0}})" />,
+            <see cref="M:Mono.Rocks.Lambda.XF``2(System.Linq.Expressions.Expression{System.Func{``0,``1}})" />,
+            <see cref="M:Mono.Rocks.Lambda.XF``3(System.Linq.Expressions.Expression{System.Func{``0,``1,``2}})" />,
+            <see cref="M:Mono.Rocks.Lambda.XF``4(System.Linq.Expressions.Expression{System.Func{``0,``1,``2,``3}})" />,
+            <see cref="M:Mono.Rocks.Lambda.XF``5(System.Linq.Expressions.Expression{System.Func{``0,``1,``2,``3,``4}})" />.
             </term>
         </item>
         <item>
