@@ -1,5 +1,9 @@
 2008-08-28  Jonathan Pryor  <jpryor@novell.com>
 
+	* Lambdas.cs: Flush doc updates.
+
+2008-08-28  Jonathan Pryor  <jpryor@novell.com>
+
 	* Lambdas.cs: Flush (changes method names; see mklambda description).
 
 2008-08-27  Jonathan Pryor  <jpryor@novell.com>
